--- a/Pandas_Essential_Training.ipynb
+++ b/Pandas_Essential_Training.ipynb
@@ -12,27 +12,41 @@
     {
       "cell_type": "code",
       "source": [
-        "oo.describe()"
+        "!pip install pandas==2.0.2"
       ],
       "metadata": {
-        "id": "rHvjM2Y0Crzy",
-        "outputId": "3f23fcc1-90b9-4716-b94d-6b1e985a2af8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rHvjM2Y0Crzy",
+        "outputId": "22d33308-eca3-47d9-9e10-8d482b1adb13"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'oo' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-5a1d95fafa61>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'oo' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pandas==2.0.2\n",
+            "  Downloading pandas-2.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas==2.0.2) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas==2.0.2) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas==2.0.2) (2024.2)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas==2.0.2) (1.26.4)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas==2.0.2) (1.17.0)\n",
+            "Downloading pandas-2.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.3 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m33.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pandas\n",
+            "  Attempting uninstall: pandas\n",
+            "    Found existing installation: pandas 2.2.2\n",
+            "    Uninstalling pandas-2.2.2:\n",
+            "      Successfully uninstalled pandas-2.2.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "google-colab 1.0.0 requires pandas==2.2.2, but you have pandas 2.0.2 which is incompatible.\n",
+            "mizani 0.13.1 requires pandas>=2.2.0, but you have pandas 2.0.2 which is incompatible.\n",
+            "plotnine 0.14.4 requires pandas>=2.2.0, but you have pandas 2.0.2 which is incompatible.\n",
+            "xarray 2024.11.0 requires pandas>=2.1, but you have pandas 2.0.2 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed pandas-2.0.2\n"
           ]
         }
       ]
